styles:fix some bugs, see description.
Slider Fix mobile width.

Arc CMS Testing

Line - 6: Typeface and type size of all photo captions is incorrect

Line -10 Promo images are too small, and vertical spacing between header and promos is too much compared with live site

--- a/resources/site-theme/votebeat/scss/components/_slide.scss
+++ b/resources/site-theme/votebeat/scss/components/_slide.scss
@@ -7,7 +7,7 @@
     overflow: visible !important;
   }
   @include respond-up(xs) {
-    margin: 0 -30px 60px -30px;
+    margin: 0 0 20px -20px;
   }
   .slick-list {
     padding-bottom: 24px;
@@ -29,7 +29,7 @@
     height: 40%;
   }
   .slick-next {
-    right: -10px !important;
+    right: -25px !important;
   }
   .slick-prev {
     left: -10px !important;
@@ -80,7 +80,7 @@
     border: none;
     align-items: center;
     height: 420px;
-    padding: 20px;
+    padding: 20px 0 20px 12px;
     border: 1px solid #ddd;
     border-radius: 4px;
   }
@@ -185,6 +185,7 @@
         display: inline-block;
         font-size: var(--font-size-promos-byline);
         line-height: normal;
+        display: inline;
       }
     }
   }
@@ -263,5 +264,11 @@
     min-height: 100%;
     min-width: 100%;
     position: absolute;
+  }
+}
+@include respond-down(xs) {
+  .SliderWrapper {
+    max-width: 100vw;
+    overflow: hidden;
   }
 }
